--- a/views/admin.head.pug
+++ b/views/admin.head.pug
@@ -18,20 +18,17 @@ html
 			a(href="/admin" class=(config.nav === 'overview' ? 'active' : ''))
 				span Overview
 
-			a(href="/admin/players" class=(config.nav === 'players' ? 'active' : ''))
-				span Players
-
 			a(href="/admin/seasons" class=(config.nav === 'seasons' ? 'active' : ''))
 				span Seasons
 
-			a(href="/admin/leagues" class=(config.nav === 'leagues' ? 'active' : ''))
-				span Leagues
+			a(href="/admin/games" class=(config.nav === 'games' ? 'active' : ''))
+				span Games
 
-			a(href="/admin/users" class=(config.nav === 'users' ? 'active' : ''))
-				span Users
+			a(href="/admin/maps" class=(config.nav === 'maps' ? 'active' : ''))
+				span Maps
 
-			a(href="/admin/log" class=(config.nav === 'logs' ? 'active' : ''))
-				span Logs
+			a(href="/admin/players" class=(config.nav === 'players' ? 'active' : ''))
+				span Players
 
 svg(height="1px" width="1px")
 	defs
