--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -22,11 +22,11 @@ html
 			a(href="/player" class=(config.nav.cat === 'players' ? 'active' : ''))
 				span Players
 
-			//- a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
-			//- 	span Leaders
+			// a(href="/leaderboards/ctf/majors" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
+			// 	span Leaders
 
-			//- a(href="/records/ctf/majors" class=(config.nav.page === 'records' ? 'active' : ''))
-			//- 	span All-time Records
+			a(href="/records/ctf/majors" class=(config.nav.page === 'records' ? 'active' : ''))
+				span Records
 
 			.right
 				form(action="/search")
