--- a/src/admin/css/main.styl
+++ b/src/admin/css/main.styl
@@ -154,21 +154,10 @@ nav
 .navbar
 	display flex
 	gap 2em
-	margin-bottom 2rem
+	margin-bottom 1.5rem
 
-	nav
 	form
 		flex 1
-
-	nav.secondary
-		filter: hue-rotate(280deg);
-		background: linear-gradient(to top right, #0b0c0e, #072e2d);
-		margin: 0 0 1.5rem 0;
-		padding: .5rem;
-		border-radius: .3rem;
-		box-sizing: border-box
-		width: fit-content;
-		flex: 0 0 auto;
 
 	.controls
 		display flex
@@ -465,6 +454,7 @@ nav
 // --------------------------------------------------------------------------
 
 @import 'overview'
+@import 'edit'
 @import 'user'
 @import 'players'
 @import 'log'
