--- a/views/admin-overview.pug
+++ b/views/admin-overview.pug
@@ -5,10 +5,13 @@ include admin.head.pug
 
 		.info
 
-			.block.totalusers
+			.block
 				.k Users
 				.v 123
 
-			.block.foods
-				.k Foods
+			.block
+				.k 123
 				.v 1231
+
+		.active
+			p Active Seasons
