--- a/views/admin.head.pug
+++ b/views/admin.head.pug
@@ -27,6 +27,9 @@ html
 			a(href="/admin/maps" class=(config.nav === 'maps' ? 'active' : ''))
 				span Maps
 
+			a(href="/admin/teams" class=(config.nav === 'teams' ? 'active' : ''))
+				span Teams
+
 			a(href="/admin/players" class=(config.nav === 'players' ? 'active' : ''))
 				span Players
 
