--- a/views/template/superleague-nav.pug
+++ b/views/template/superleague-nav.pug
@@ -7,7 +7,7 @@
 			// .crumb ›
 			.current Season #{config.season}
 
-		if config.nav.cat === 'ecltp' || config.nav.cat === 'eltp'
+		if config.nav.cat === 'ecltp' || config.nav.cat === 'eltp' || config.nav.cat === 'nltp' || config.nav.cat === 'mltp'
 			h1 #{config.nav.cat.toUpperCase()} #{config.tier}
 		else
 			h1 #{config.nav.cat.toUpperCase()} Super League
