--- a/src/app/css/spy.styl
+++ b/src/app/css/spy.styl
@@ -57,6 +57,28 @@
 			.item[data-column="openskill"]
 				flex 0 0 7.5%
 
+			.item.tier
+				flex 0 0 80px
+
+				span
+					padding .4rem
+					border-radius .3rem
+					text-transform uppercase
+					font-weight 500
+					font-size .7rem
+					line-height .6rem
+
+				.majors
+					background rgba(green, .2)
+					color lighten(green, 50%)
+				.minors
+					background rgba(red, .2)
+					color lighten(red, 50%)
+
+				.novice
+					background rgba(#ffa500, .2)
+					color lighten(#ffa500, 50%)
+
 
 
 
