--- a/src/app/css/spy.styl
+++ b/src/app/css/spy.styl
@@ -30,6 +30,20 @@
 				animation: animate 5s ease-in-out infinite;
 				margin-left .5rem
 
+			.item[data-column="mmr"]
+				flex 0 0 150px
+				margin-left 1rem
+
+			.item[data-column="r300"]
+				flex 0 0 60px
+
+			.item[data-column="rank"]
+				color rgba(white, .15)
+				background black
+				font-size .7rem
+				flex 0 0 24px
+				justify-content center
+
 			.item.age
 				flex 0 0 10%
 				box-sizing border-box
